
option java_outer_classname="RemoveGroupCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message RemoveGroupCommand {
	optional int64 requestId = 1;
	optional string group = 2;
	optional string subGroup = 3;
}